enum RolesEnum { ADMIN, USER }

type User{
    id: ID!
    name: String!
    email: String!
    role: RolesEnum!
}

input CreateUserInput{
    name: String!
    email: String!
    password: String!
    role: RolesEnum
}